<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/aquamarine"
                android:layout_marginTop="30dp"
                android:textSize="30sp"
                android:text="@string/title"
                android:textAlignment="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="7dp"
                android:textAlignment="center"
                android:text="@string/count_steps"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:drawableLeft="@drawable/step"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:text="@string/description"
                android:paddingLeft="20dp"
                android:textSize="20sp"
                android:layout_marginLeft="10dp"
                android:textColor="@color/aquamarine"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="7dp"
                android:textSize="20sp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/info"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:textAlignment="textStart"/>

            <Button
                android:id="@+id/button"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:onClick="get_result"
                android:background="@drawable/button_style"
                android:text="@string/get_result"/>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>