<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AuthActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <ImageView
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:src="@drawable/picture"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="125dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:layout_marginTop="5sp"
            android:hint="@string/email"
            android:textSize="14sp"
            android:paddingLeft="5dp"
            android:textColorHint="@color/aquamarine"
            android:background="@drawable/edittext_style"/>

        <EditText
            android:id="@+id/psswd"
            android:layout_width="125dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:layout_marginTop="5sp"
            android:hint="@string/password"
            android:textSize="14sp"
            android:paddingLeft="5dp"
            android:textColorHint="@color/aquamarine"
            android:background="@drawable/edittext_style"/>

        <Button
            android:id="@+id/buttonSignIn"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_style"
            android:text="@string/sign_in"
            android:textSize="16sp"
            android:textAllCaps="false"/>
    </LinearLayout>

</LinearLayout>